welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:7: error: type mismatch;
 found   : None.type
 required: Int
    return None
           ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for( i <- 0 to nums.length-1){
         ^